# CS221

./: .gitignore  Gemfile  _config.yml  index.html  readMe.md  resources.md  roadMap.md
Qt/: configure_qt.md
_site/: index.html  roadMap.org
_site/404/: index.html
_site/about/: index.html
_site/assignments/0_welcome/: readMe.org
_site/debugging/: index.html
_site/intro/: index.html
_site/oop/oop/: index.html
assignments/04_complexity/: complexity.md
assignments/05_classes/: bouncing_balls.md
assignments/06_recurrence/: fractals.md
assignments/07_quicksort/: quicksort.md
assignments/08_linked_lists/: fun_with_linked_lists.md
assignments/0_welcome/: debugging.md
assignments/1_strings/: 02_string.md
assignments/2_arrays/: 02_arrays.md
assignments/3_pointers/: working_with_pointers.md
part1/: basics.md  intro.md  strings.md
part1/code/: functions_overloading.cpp  second  second_program.cpp
part1/code/10_basics/: CMakeLists.txt
part1/code/10_basics/src/: number_decomposition.cpp  passing_arguments.cpp  testing_structures.cpp  using_pairs.cpp
part2/: game_life.md  pointers.md  rawvectors.md  vectors.md
part2/charts/: 01_momory.dot  02_variable_representation.dot  03_erick_variable.dot  04_pointer_erick_simple.dot  05_change_point_left.dot  06_change_point_right.dot  07_pointer_arrays.dot
part2/code/vectors/: CMakeLists.txt
part2/code/vectors/src/: 01_array_dvd.cpp  02_array_with_functions.cpp  03_even_digit_numbers.cpp
part3/: classes.md  complexity.md  recurrence.md  sorting.md
part4/: linked_lists1.md
(+6 files in other folders)
